--- a/tests/test.html
+++ b/tests/test.html
@@ -24,6 +24,6 @@
 			echo $q;
 		}
 	?>
-	<p>And I think <?= $this ?> is another one too</p>
+	<p>And I think <?= ($my === 'testing') ?> is another one too</p>
 </body>
 </html>
