--- a/index.html
+++ b/index.html
@@ -1,62 +1,67 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
-
     <title>Qi by TheRohans</title>
+
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
-
-    <header>
-      <div class="container">
+    <div class="wrapper">
+      <header>
         <h1>Qi</h1>
-        <h2>Minimalist emacs like terminal editor forked from qemacs</h2>
+        <p>Minimalist emacs like terminal editor forked from qemacs</p>
 
-        <section id="downloads">
-          <a href="https://github.com/TheRohans/qi/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/TheRohans/qi/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/TheRohans/qi" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
+        <p class="view"><a href="https://github.com/TheRohans/qi">View the Project on GitHub <small>TheRohans/qi</small></a></p>
 
-    <div class="container">
-      <section id="main_content">
-        <h3>Welcome to GitHub Pages.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+        <ul>
+          <li><a href="https://github.com/TheRohans/qi/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/TheRohans/qi/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/TheRohans/qi">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
+        <h3>Welcome to 气 (Qi)</h3>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
+<p>I've tried many editors over the years, but I have never found one that fits me perfectly.  So, I decided to fork some old open source code, clean it up, build upon it, and make an editor that would be perfect for me.</p>
+
+<p>While this is blasphemy to some, I think of Qi as a combination of Emacs and Vi.  It has the usability of Emacs with the speed, small foot print and large file editing capabilities of vi.  </p>
+
+<p>Qi is, selfishly, for me <a href="https://github.com/robrohan" class="user-mention">@robrohan</a>.  You are welcome to fork, use, make suggestions, or send me questions about Qi, but I am only going to add stuff I personally want or find useful.</p>
+
+<p>Here are some things that make Qi Qi (or will; not everything works yet):</p>
+
+<ul>
+<li>Emacs keybindings</li>
+<li>Everything is UTF-8 by default (welcome to the 21st century)</li>
+<li>Text and hex based editing of anything<br>
+</li>
+<li>Open and edit large files </li>
+<li>Syntax highlighting for C, Markdown, HTML, CSS, PHP, and a few others. (Or not if you build tiny)</li>
+<li>Simplified Chinese support (and soon input (if you terminal does UTF-8. See second point))</li>
+<li>Works on Mac OS X Lion and Ubuntu 12.04</li>
+<li>Full feature compile weights in at 355K. Tiny build: 197K - smaller than most website images.</li>
+</ul><p>If you want to try Qi, you can do so in 4 nerdly easy steps</p>
+
+<pre><code>$ git clone https://github.com/TheRohans/qi.git
+$ cd qi
+$ ./configure
+$ make qi
 </code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/TheRohans">TheRohans</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
   </body>
 </html>
