Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>Qi</h1>
-        <p>Minimalist emacs like terminal editor</p>
+        <p>Minimalist terminal editor</p>
 
         <p class="view"><a href="https://github.com/TheRohans/qi">View the Project on GitHub <small>TheRohans/qi</small></a></p>
 
