Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 
 <p>I've tried many editors over the years, but I have never found one that fits me perfectly.  So, I decided to fork some old open source code, clean it up, build upon it, and make an editor that would be perfect for me.</p>
 
+<p><img src="http://software.robrohan.com.s3.amazonaws.com/Qi/triwindo.png" alt="qi editor" title="Tri Window with Shell"></p>
+
 <p>While this is blasphemy to some, I think of Qi as a combination of Emacs and Vi.  It has the usability of Emacs with the speed, small foot print and large file editing capabilities of vi.  </p>
 
 <p>Qi is, selfishly, for me <a href="https://github.com/robrohan" class="user-mention">@robrohan</a>.  You are welcome to fork, use, make suggestions, or send me questions about Qi, but I am only going to add stuff I personally want or find useful.</p>
@@ -48,13 +50,18 @@
 <li>Simplified Chinese support (and soon input (if you terminal does UTF-8. See second point))</li>
 <li>Works on Mac OS X Lion and Ubuntu 12.04</li>
 <li>Full feature compile weights in at 355K. Tiny build: 197K - smaller than most website images.</li>
-</ul><p>If you want to try Qi, you can do so in 4 nerdly easy steps</p>
+<li>Using an SSH app, you can use it on a mobile device</li>
+</ul><p><img src="http://software.robrohan.com.s3.amazonaws.com/Qi/ipad_coda.png" alt="qi on the ipad" title="On the ipad using coda"></p>
+
+<p>If you want to try Qi, you can do so in 4 nerdly easy steps</p>
 
 <pre><code>$ git clone https://github.com/TheRohans/qi.git
 $ cd qi
 $ ./configure
 $ make qi
 </code></pre>
+
+<p><img src="http://software.robrohan.com.s3.amazonaws.com/Qi/dired.png" alt="random picture" title="Project-ish view"></p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/TheRohans">TheRohans</a></p>
