Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 <li>Text and hex based editing of anything<br>
 </li>
 <li>Open and edit large files </li>
-<li>Syntax highlighting for C, Markdown, HTML, CSS, PHP, and a few others. (Or not if you build tiny)</li>
-<li>Simplified Chinese support (and soon input (if you terminal does UTF-8. See second point))</li>
+<li>Basic syntax highlighting for C, Markdown, HTML, CSS, PHP, and a few others. (Or not if you build tiny)</li>
+<li>Simplified Chinese support (and soon input (if your terminal supports UTF-8. See second point))</li>
 <li>Works on Mac OS X Lion and Ubuntu 12.04</li>
 <li>Full feature compile weights in at 355K. Tiny build: 197K - smaller than most website images.</li>
-<li>Using an SSH app, you can use it on a mobile device</li>
+<li>Using an SSH app, you can use Qi on a mobile device</li>
 </ul><p><img src="http://software.robrohan.com.s3.amazonaws.com/Qi/ipad_coda.png" alt="qi on the ipad" title="On the ipad using coda"></p>
 
 <p>If you want to try Qi, you can do so in 4 nerdly easy steps</p>
