Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 <ul>
 <li>Emacs keybindings</li>
 <li>Everything is UTF-8 by default (welcome to the 21st century)</li>
+<li>Compiles into a single, standalone binary</li>
 <li>Text and hex based editing of anything<br>
 </li>
 <li>Open and edit large files </li>
