Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@ $ make qi
 </code></pre>
 
 <p><img src="http://software.robrohan.com.s3.amazonaws.com/Qi/dired.png" alt="random picture" title="Project-ish view"></p>
+
+<p>Qi is forked from QEmacs by Fabrice Bellard, and is released under the GNU Lesser General Public License.</p>
+
+<p>Qi is copyright 2013 The Rohans, LLC; 2002 Fabrice Bellard.</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/TheRohans">TheRohans</a></p>
