Playing with styles a bit more and updating test files

--- a/test_data/test.html
+++ b/test_data/test.html
@@ -1,11 +1,15 @@
 <html>
 <head>
 	<script type="text/javascript">
-	$(document).ready(function(){
+    $(document).ready(function(){
 		for(var x=0; x<10; x++) {
 			console.log(x);
 		}
-	});
+    });
+    function testing() {
+        const stuff = "12345";
+        let things = "3333";
+    }
 	</script>
 	<style type="text/css">
 	.thing {
